--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <body>
 
 <div class="profile-icon" id="profileIcon"></div>
-<div class="chat-bubble" id="chatBubble">Hi! I'm Sadewoo, a Freelance 2D Animator. Here i share my works and plugins i created. Thankyou for visiting!
+<div class="chat-bubble" id="chatBubble">Hi! I'm Sadewoo, a Freelance 2D Animator. Here i share my works and tools i created. Thankyou for visiting!
 	</div>
 
 <script>
