--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </a>
     </li>
     <li>
-      <a href="pages/gallery.html" class="wii">
+      <a href="pages/Gallery/index.html" class="wii">
         <span>Art</span>
       </a>
     </li>
@@ -69,84 +69,84 @@
       <div class="section-title">Featured Works</div>
       <div class="grid">
         <div class="card" data-video="https://www.youtube.com/embed/Bi_s_g2l1Yk">
-          <img src="https://cdn.myanimelist.net/images/anime/1993/143335.jpg" alt="Death Note poster">
+          <img src="https://cdn.myanimelist.net/images/anime/1993/143335.jpg" alt="">
           <div class="overlay-genre">Anime</div>
           <div class="overlay-title">Kinnikuman: Perfect Origin Arc</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/nTF6QBu7vMA">
-          <img src="https://cdn.myanimelist.net/images/anime/1937/146622l.jpg" alt="Attack on Titan poster">
+          <img src="https://cdn.myanimelist.net/images/anime/1937/146622l.jpg" alt="">
           <div class="overlay-genre">Anime</div>
           <div class="overlay-title">Yaiba: Samurai Legend</div>
         </div>
         <div class="card tba" data-video="">
-          <img src="https://cdn.myanimelist.net/images/anime/1885/127108.jpg" alt="Fullmetal Alchemist: Brotherhood poster">
+          <img src="https://cdn.myanimelist.net/images/anime/1885/127108.jpg" alt="">
           <div class="overlay-genre">Anime</div>
           <div class="overlay-title">One-Punch Man Season 3</div>
         </div>
         <div class="card tba" data-video="">
-          <img src="https://cdn.myanimelist.net/images/anime/1333/151768.jpg" alt="Naruto poster">
+          <img src="https://cdn.myanimelist.net/images/anime/1333/151768.jpg" alt="">
           <div class="overlay-genre">Anime</div>
           <div class="overlay-title">Ganglion</div>
         </div>
         <div class="card tba" data-video="">
-          <img src="https://cdn.myanimelist.net/images/anime/1679/152682.jpg" alt="One Punch Man poster">
+          <img src="https://cdn.myanimelist.net/images/anime/1679/152682.jpg" alt="">
           <div class="overlay-genre">Anime</div>
           <div class="overlay-title">Magic Knight Rayearth (2026)</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/BLUcapqwyuU">
-          <img src="https://m.media-amazon.com/images/M/MV5BMmMwYzZjMzAtN2I3Ny00MTdhLTg1Y2YtNDZiMzhhODY3ZjJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Your Name poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BMmMwYzZjMzAtN2I3Ny00MTdhLTg1Y2YtNDZiMzhhODY3ZjJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="">
           <div class="overlay-genre">Video Game</div>
           <div class="overlay-title">Friday Night Funkin'</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/XhhEXK3NkzU">
-          <img src="https://m.media-amazon.com/images/M/MV5BZWJlZTM2OWYtYTkxZC00OTQyLThjOWEtN2VkOGE1MTFmNGQxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Your Name poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BZWJlZTM2OWYtYTkxZC00OTQyLThjOWEtN2VkOGE1MTFmNGQxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="">
           <div class="overlay-genre">Video Game</div>
           <div class="overlay-title">Hi-Fi Rush</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/akaQ1tarUQo">
-          <img src="https://e.snmc.io/lk/f/x/edfaf7f229be0f8c28839bc97b4f82e9/10511778" alt="Your Name poster">
+          <img src="https://e.snmc.io/lk/f/x/edfaf7f229be0f8c28839bc97b4f82e9/10511778" alt="">
           <div class="overlay-genre">Video Game</div>
           <div class="overlay-title">Inkbound</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/iZw1_2PFsZE">
-          <img src="https://m.media-amazon.com/images/M/MV5BYzE3ZjIxZDYtMDFjNi00OTBjLWI0NmQtY2IyM2YzZTYwMjA1XkEyXkFqcGc@._V1_.jpg" alt="Your Name poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BYzE3ZjIxZDYtMDFjNi00OTBjLWI0NmQtY2IyM2YzZTYwMjA1XkEyXkFqcGc@._V1_.jpg" alt="">
           <div class="overlay-genre">Video Game</div>
           <div class="overlay-title">Vampire Survivors</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/YQXp2gEoevs">
-          <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co30qj.jpg" alt="Your Name poster">
+          <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co30qj.jpg" alt="">
           <div class="overlay-genre">Video Game</div>
           <div class="overlay-title">Nova Island</div>
         </div>
         <div class="card" data-video="">
         	<a href="https://sadewoo.tumblr.com/post/732936987201404928/post-animation-little-goody-two-shoes-trailer">
-          <img src="https://m.media-amazon.com/images/M/MV5BZjkwNDkwMzEtZDZhZC00MGI1LTk0YmUtMzE0NWUzZjdlYjM1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Your Name poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BZjkwNDkwMzEtZDZhZC00MGI1LTk0YmUtMzE0NWUzZjdlYjM1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="">
           </a>
           <div class="overlay-genre">Video Game</div>
           <div class="overlay-title">Little Goody Two Shoes</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/tkAB6crm764">
-          <img src="https://m.media-amazon.com/images/M/MV5BOGExYmQ1N2QtYzE2YS00ZTE2LWEwZTItZjUwNTNhYzJiYjdlXkEyXkFqcGc@._V1_.jpg" alt="Steins;Gate poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BOGExYmQ1N2QtYzE2YS00ZTE2LWEwZTItZjUwNTNhYzJiYjdlXkEyXkFqcGc@._V1_.jpg" alt="">
           <div class="overlay-genre">Cartoon</div>
           <div class="overlay-title">Animaniacs (2020)</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/ZArlzeNNAEs">
-          <img src="https://m.media-amazon.com/images/M/MV5BM2E4MDU4NDctNjIxZC00ZWM5LTkyNDQtOGU0MTRhYWVmNzQ5XkEyXkFqcGc@._V1_.jpg" alt="Your Name poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BM2E4MDU4NDctNjIxZC00ZWM5LTkyNDQtOGU0MTRhYWVmNzQ5XkEyXkFqcGc@._V1_.jpg" alt="">
           <div class="overlay-genre">Cartoon</div>
           <div class="overlay-title">Helluvaboss</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/p5pbg6SNWDg">
-          <img src="https://m.media-amazon.com/images/M/MV5BYjhmNTAzYmQtMzFkMi00NzEyLWJhMzctZmM2NzRmYmE3MTU4XkEyXkFqcGc@._V1_.jpg" alt="Your Name poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BYjhmNTAzYmQtMzFkMi00NzEyLWJhMzctZmM2NzRmYmE3MTU4XkEyXkFqcGc@._V1_.jpg" alt="">
           <div class="overlay-genre">Cartoon</div>
           <div class="overlay-title">Craig Before The Creek</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/IeXNLjLW2FY">
-          <img src="https://m.media-amazon.com/images/M/MV5BZTg4MDRiMTktOWYyZS00YTIwLTg5ODItYWFmNGExZTg1NWEzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Your Name poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BZTg4MDRiMTktOWYyZS00YTIwLTg5ODItYWFmNGExZTg1NWEzXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="">
           <div class="overlay-genre">Cartoon</div>
           <div class="overlay-title">I Heart Arlo</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/00_sb0h2mRQ">
-          <img src="https://resizing.flixster.com/l-_w1KP9x9U4KRTaKSF9i3_FjtU=/206x305/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p21364888_b_v8_aa.jpg" alt="Your Name poster">
+          <img src="https://resizing.flixster.com/l-_w1KP9x9U4KRTaKSF9i3_FjtU=/206x305/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p21364888_b_v8_aa.jpg" alt="">
           <div class="overlay-genre">Cartoon</div>
           <div class="overlay-title">Smiling Friends Season 2</div>
         </div>
