--- a/pages/Gallery/index.html
+++ b/pages/Gallery/index.html
@@ -96,6 +96,11 @@
   border-radius: 5px;
   display: none; /* hidden by default */
 }
+body.noscroll {
+  overflow: hidden;
+  position: fixed;   /* locks body in place */
+  width: 100%;       /* ensures full width */
+}
 
 #search{visibility:hidden;}
 
