--- a/pages/Gallery/index.html
+++ b/pages/Gallery/index.html
@@ -101,6 +101,7 @@
 
 body.noscroll {
 overscroll-behavior-y: contain; /* stops pull-to-refresh */
+ touch-action: none;  
   overscroll-behavior-x: none;    /* optional: no horizontal bounce */
   height: 100%;
   margin: 0;
