--- a/index.html
+++ b/index.html
@@ -78,13 +78,17 @@
           <div class="overlay-genre">Anime</div>
           <div class="overlay-title">Yaiba: Samurai Legend</div>
         </div>
-        <div class="card tba" data-video="">
+        <div class="card" data-video="">
+        		<a href="https://www.sakugabooru.com/post/show/295710">
           <img src="https://cdn.myanimelist.net/images/anime/1885/127108.jpg" alt="">
+          </a>
           <div class="overlay-genre">Anime</div>
           <div class="overlay-title">One-Punch Man Season 3</div>
         </div>
-        <div class="card tba" data-video="">
+        <div class="card" data-video="">
+        	<a href="https://www.instagram.com/sadewoo0/p/DR_tgEwE8k4/">
           <img src="https://cdn.myanimelist.net/images/anime/1333/151768.jpg" alt="">
+          </a>
           <div class="overlay-genre">Anime</div>
           <div class="overlay-title">Ganglion</div>
         </div>
