--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <div class="overlay-genre">Anime</div>
           <div class="overlay-title">Yaiba: Samurai Legend</div>
         </div>
-        <div class="card" data-video="">
-        		<a href="https://www.sakugabooru.com/post/show/295710">
+        <div class="card tba" data-video="">
+        		<a href="">
           <img src="https://cdn.myanimelist.net/images/anime/1885/127108.jpg" alt="">
           </a>
           <div class="overlay-genre">Anime</div>
