--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -19,6 +19,7 @@
          <div class="group">
             <input id="col" type="color" value="#000000">
             <button id="brush"><span id="brush-icon" class="bl-icons-greasepencil"></span></button>
+            <button id="aliased"><span class="bl-icons-aliased"></span></button>
             </div>
 			<div class="group">
 	         <button id="clr"><span class="bl-icons-file_hidden"></span></button>
