--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -54,7 +54,7 @@
 </div>
 <button id="applySize">Resize Center(Stretch)</button>
 
-<input id="url" type="text" value="https://traditionalanimatorindonesia.github.io/pages/Templates/assets/AnimeGO_Storyboard.png" placeholder="Image URL">
+<input id="url" type="text" value="" placeholder="Image URL">
             <button id="load">Load Image</button>
             
             <button onclick="window.open('https://spikysaurus.github.io', '_blank');" id="home"><span class="bl-icons-url"></span>Home</button>
