--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -55,7 +55,7 @@
 <button id="applySize">Resize Center(Stretch)</button>
 
 <input id="url" type="text" value="" placeholder="Image URL">
-            <button id="load">Load Image</button>
+            <button id="load">Load BG</button>
             
             <button onclick="window.open('https://spikysaurus.github.io', '_blank');" id="home"><span class="bl-icons-url"></span>Home</button>
             <button onclick="window.open('https://traditionalanimatorindonesia.github.io/pages/Templates/index.html', '_blank');" id="templates"><span class="bl-icons-url"></span>Templates</button>
