--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -80,7 +80,10 @@
 <button id="toggleLabel"><span class="bl-icons-preferences"></span></button>
 <button id="swapPrev"><span class="bl-icons-area_join_left"></span></button>
 <button id="swapNext"><span class="bl-icons-area_join"></span></button>
+<button id="duplicateBtn"><span class="bl-icons-duplicate"></span></button>
 <button id="add"><span class="bl-icons-file_new"></span></button>
+<button id="playBtn"><span id="playBtn_icon"class="bl-icons-play"></span></button>
+
 </div>
 </div>
 
