--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -83,6 +83,7 @@
 <button id="duplicateBtn"><span class="bl-icons-duplicate"></span></button>
 <button id="add"><span class="bl-icons-file_new"></span></button>
 <button id="playBtn"><span id="playBtn_icon"class="bl-icons-play"></span></button>
+<button id="onionBtn"><span id="onion-icon"class="bl-icons-onionskin_off"></span></button>
 
 </div>
 </div>
