--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -62,8 +62,8 @@
             <button id="checkerboardBtn"><span class="bl-icons-texture"></span></button>
             
             <div class="side-by-side">
-  <label for="GifDelay">Delay (ms):</label>
-  <input id="GifDelay" type="number" value="100" style="width:80px;">
+  <label for="GifDelay">FPS</label>
+  <input id="GifDelay" type="number" value="24">
   <button id="exportGif">
     Export GIF
   </button>
