--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -19,6 +19,7 @@
          </div>
          <div class="group">
             <input id="col" type="color" value="#000000">
+            <button id="ColorPickerBtn"><span class="bl-icons-material"></span></button>
             <button id="brush"><span id="brush-icon" class="bl-icons-greasepencil"></span></button>
             <button id="aliased"><span class="bl-icons-aliased"></span></button>
             <button id="fillBtn"><span class="bl-icons-image"></span></button>
@@ -89,9 +90,15 @@
 </div>
 
 <div class="sliders">
-<div class="control">	
-<button id="ColorPickerBtn"><span class="bl-icons-material"></span></button>
-</div>
+
+
+
+	<div class="control">
+	<button id="nextBtn"><span class="bl-icons-frame_next"></span></button>
+	</div>
+	<div class="control">
+	<button id="prevBtn"><span class="bl-icons-frame_prev"></span></button>
+	</div>
 		<div class="control">
 <!--  <span class="control-label">Size</span>-->
   <button
