--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -20,7 +20,8 @@
          <div class="group">
             <input id="col" type="color" value="#000000">
             <button id="ColorPickerBtn"><span class="bl-icons-material"></span></button>
-            <button id="brush"><span id="brush-icon" class="bl-icons-greasepencil"></span></button>
+            <button id="ToolBrushBtn" style="background-color:yellow;"><span class="bl-icons-greasepencil"></span></button>
+            <button id="ToolEraserBtn"><span class="bl-icons-meta_ellipsoid"></span></button>
             <button id="aliased"><span class="bl-icons-aliased"></span></button>
             <button id="ToolFillBtn"><span class="bl-icons-image"></span></button>
             </div>
