--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -28,9 +28,10 @@
 			<div class="group">
 	         <button id="clr"><span class="bl-icons-file_hidden"></span></button>
 	         <button id="ToolSelectBtn"><span class="bl-icons-select_set"></span></button>
-	         <button id="copy"><span class="bl-icons-duplicate"></span></button>
 	         <button id="cut"><span class="bl-icons-node_insert_on"></span></button>
+	         <button id="copy"><span class="bl-icons-duplicate"></span></button>
 	         <button id="paste"><span class="bl-icons-pastedown"></span></button>
+	         <button id="delete"><span class="bl-icons-trash"></span></button>
          </div>
            
          <div class="group">
