--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -24,6 +24,8 @@
             <button id="ToolEraserBtn"><span class="bl-icons-meta_ellipsoid"></span></button>
             <button id="aliased"><span class="bl-icons-aliased"></span></button>
             <button id="ToolFillBtn"><span class="bl-icons-image"></span></button>
+            <button id="ToolLassoFillBtn"><span class="bl-icons-meta_data"></span></button>
+            
             </div>
 			<div class="group">
 	         <button id="clr"><span class="bl-icons-file_hidden"></span></button>
@@ -59,7 +61,6 @@
 
 <input id="url" type="text" value="" placeholder="Image URL">
             <button id="load">Load BG</button>
-            
             <button onclick="window.open('https://spikysaurus.github.io', '_blank');" id="home"><span class="bl-icons-url"></span>Home</button>
             <button onclick="window.open('https://traditionalanimatorindonesia.github.io/pages/Templates/index.html', '_blank');" id="templates"><span class="bl-icons-url"></span>Templates</button>
             <button id="checkerboardBtn"><span class="bl-icons-texture"></span></button>
@@ -93,7 +94,9 @@
 
 <div class="sliders">
 
-
+	<div class="control">
+		<button id="ToolLassoFillToggle" style="display:none;">Fill</button>
+	</div>
 	<div class="control">
 	<button id="prevBtn"><span class="bl-icons-frame_prev"></span></button>
 	</div>
