--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -40,6 +40,7 @@
             <button id="ToolPanBtn"><span class="bl-icons-view_pan"></span></button>
             <button id="zoomIn"><span class="bl-icons-zoom_in"></span></button>
             <button id="zoomOut"><span class="bl-icons-zoom_out"></span></button>    
+            <button id="fitScreen"><span class="bl-icons-fullscreen_enter"></span></button> 
          </div>
       
 
