--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -143,7 +143,7 @@
       <div id="stage">  
          <div id="stack">
 				<canvas id="checkerboard"></canvas>
-            <canvas id="bg"></canvas>
+            <canvas id="background"></canvas>
             <canvas id="layer_1"></canvas>
             <canvas id="overlay"></canvas>
          </div>
