--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -102,6 +102,12 @@
 		<button id="ToolLassoFillToggle" style="display:none;">Fill</button>
 	</div>
 	<div class="control">
+		<button id="undoBtn"><span class="bl-icons-loop_back"></span></button>
+	</div>
+	<div class="control">
+		<button id="redoBtn"><span class="bl-icons-loop_forwards"></button>
+	</div>
+	<div class="control">
 	<button id="prevBtn"><span class="bl-icons-frame_prev"></span></button>
 	</div>
 	
