--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -46,6 +46,11 @@
 
 
 <div id="settings">
+
+
+  <input type="checkbox" id="pressureSizeToggle" checked> Size Pressure
+  <input type="checkbox" id="pressureOpacityToggle" unchecked> Opacity Pressure
+
 <div class="side-by-side">
   Size<input id="canvasWidth" type="number" value="640" ><input id="canvasHeight" type="number" value="360"><br>
  </div>
