--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -48,7 +48,7 @@
 <div id="settings">
 
 
-  <input type="checkbox" id="pressureSizeToggle" checked> Size Pressure
+  <input type="checkbox" id="pressureSizeToggle" unchecked> Size Pressure
   <input type="checkbox" id="pressureOpacityToggle" unchecked> Opacity Pressure
 
 <div class="side-by-side">
