--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8">
+      <meta name="mobile-web-app-capable" content="yes">
       <title>Kertas</title>
       <link rel="stylesheet" href="assets/main/style.css">
       <link rel="stylesheet" href="assets/bl-icons/bl-icons.css">
