--- a/pages/ImageSequenceDeduplicator/index.html
+++ b/pages/ImageSequenceDeduplicator/index.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <head>
   <meta charset="UTF-8">
+  <meta name="mobile-web-app-capable" content="yes">
   <title>Image Sequence Deduplicator</title>
   <style>
   html, body {
