--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="assets/main/style.css">
       <link rel="stylesheet" href="assets/bl-icons/bl-icons.css">
       <link rel="stylesheet" href="assets/color-picker/ColorPicker.css">
+      <link rel="manifest" href="assets/manifest/manifest.json">
       <meta name="viewport" content="width=device-width, initial-scale=1" />
    </head>
    <body>
