--- a/pages/tools.html
+++ b/pages/tools.html
@@ -39,22 +39,27 @@
   </a> 
   
   <a class="social-btn" href="XDTS-Editor/index.html">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/LibreOffice_7.5_Calc_Icon.svg/640px-LibreOffice_7.5_Calc_Icon.svg.png" alt="XDTS Editor">
+<!--    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/LibreOffice_7.5_Calc_Icon.svg/640px-LibreOffice_7.5_Calc_Icon.svg.png" alt="XDTS Editor">-->
     <h1>XDTS Editor</h1>
   </a>
   
+  <a class="social-btn" href="WebRef/index.html">
+<!--    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/LibreOffice_7.5_Calc_Icon.svg/640px-LibreOffice_7.5_Calc_Icon.svg.png" alt="XDTS Editor">-->
+    <h1>WebRef (reference board)</h1>
+  </a>
+  
   <a class="social-btn" href="Kertas/index.html">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c0/Crystal_looknfeel.png" alt="Kertas">
-    <h1>Kertas</h1>
+<!--    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c0/Crystal_looknfeel.png" alt="Kertas">-->
+    <h1>Kertas (for sketching)</h1>
   </a>
   
   <a class="social-btn" href="Animasikan/index.html">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Comedy_film_icon_2.svg/640px-Comedy_film_icon_2.svg.png" alt="Animasikan">
-    <h1>Animasikan</h1>
+<!--    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Comedy_film_icon_2.svg/640px-Comedy_film_icon_2.svg.png" alt="Animasikan">-->
+    <h1>Animasikan (for stopmotion)</h1>
   </a>
   
   <a class="social-btn" href="ImageSequenceDeduplicator/index.html">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/File_equals_icon.svg/120px-File_equals_icon.svg.png" alt="Animasikan">
+<!--    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/File_equals_icon.svg/120px-File_equals_icon.svg.png" alt="Animasikan">-->
     <h1>Image Sequence Deduplicator</h1>
   </a>
   
