--- a/pages/WebRef/index.html
+++ b/pages/WebRef/index.html
@@ -36,6 +36,7 @@
 <!-- Bottom-left toggle button -->
 <div class="nav-toggle">
   <button id="navButton"><span class="bl-icons-camera_data"></span></button>
+  <button id="snapButton"><span class="bl-icons-snap_on"></span></button>
 </div>
 
 
