--- a/pages/WebRef/index.html
+++ b/pages/WebRef/index.html
@@ -14,6 +14,7 @@
 		<button id="mirrorH">X</button>
 		<button id="mirrorV">Y</button>
 		<button id="deleteImage"><span class="bl-icons-trash"></span></button>
+		 <button id="snapButton" style=""><span class="bl-icons-snap_increment"></span></button>
   </div>
   
   <div id="board" class="board">
@@ -36,7 +37,7 @@
 <!-- Bottom-left toggle button -->
 <div class="nav-toggle">
   <button id="navButton"><span class="bl-icons-camera_data"></span></button>
-<!--  <button id="snapButton"><span class="bl-icons-snap_on"></span></button>-->
+
 </div>
 
 
