--- a/pages/WebRef/index.html
+++ b/pages/WebRef/index.html
@@ -11,6 +11,7 @@
   <div class="toolbar">
   		<button id="menuToggle"><span class="bl-icons-key_menu"></span></button>
 	  <label for="importImages" class="import-btn">+</label>	
+	  <button id="pasteImage"><span class="bl-icons-pastedown"></span></button>
 		<button id="mirrorH">X</button>
 		<button id="mirrorV">Y</button>
 		<button id="deleteImage"><span class="bl-icons-trash"></span></button>
