--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <li>
       <a href="pages/projects.html" class="wii">
-        <span>Works</span>
+        <span>Animations</span>
       </a>
     </li>
     <li>
@@ -34,9 +34,8 @@
       </a>
     </li>
     <li>
-      <a href="pages/tools.html" class="nav-button">
-        <img src="assets/image/coin_python.png">
-<!--        <span><img width=100px src=""></span>-->
+      <a href="pages/tools.html" class="wii">
+      <span>Tools</span>
       </a>
     </li>
   </ul>
@@ -66,7 +65,7 @@
 
     <!-- Right side -->
     <div class="right">
-      <div class="section-title">Featured Works</div>
+      <div class="section-title">Featured Animations (click to play)</div>
       <div class="grid">
         <div class="card" data-video="https://www.youtube.com/embed/Bi_s_g2l1Yk">
           <img src="https://cdn.myanimelist.net/images/anime/1993/143335.jpg" alt="">
