--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <!-- Right side -->
     <div class="right">
-      <div class="section-title">Featured Animations (click to play)</div>
+      <div class="section-title">Featured Works (click to play)</div>
       <div class="grid">
         <div class="card" data-video="https://www.youtube.com/embed/Bi_s_g2l1Yk">
           <img src="https://cdn.myanimelist.net/images/anime/1993/143335.jpg" alt="">
