--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
         <div class="card" data-video="https://www.youtube.com/embed/Bi_s_g2l1Yk">
           <img src="https://cdn.myanimelist.net/images/anime/1993/143335.jpg" alt="">
           <div class="overlay-genre">Anime</div>
-          <div class="overlay-title">Kinnikuman: Perfect Origin Arc</div>
+          <div class="overlay-title">Kinnikuman</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/nTF6QBu7vMA">
           <img src="https://cdn.myanimelist.net/images/anime/1937/146622l.jpg" alt="">
           <div class="overlay-genre">Anime</div>
-          <div class="overlay-title">Yaiba: Samurai Legend</div>
+          <div class="overlay-title">Yaiba</div>
         </div>
         <div class="card" data-video="">
         		<a href="https://x.com/sadewoo0/status/1998608699368288736">
           <img src="https://cdn.myanimelist.net/images/anime/1885/127108.jpg" alt="">
           </a>
           <div class="overlay-genre">Anime</div>
-          <div class="overlay-title">One-Punch Man Season 3</div>
+          <div class="overlay-title">OPM S3</div>
         </div>
         <div class="card" data-video="">
         	<a href="https://www.instagram.com/sadewoo0/p/DR_tgEwE8k4/">
@@ -94,12 +94,12 @@
         <div class="card tba" data-video="">
           <img src="https://cdn.myanimelist.net/images/anime/1679/152682.jpg" alt="">
           <div class="overlay-genre">Anime</div>
-          <div class="overlay-title">Magic Knight Rayearth (2026)</div>
+          <div class="overlay-title">Rayearth</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/BLUcapqwyuU">
           <img src="https://m.media-amazon.com/images/M/MV5BMmMwYzZjMzAtN2I3Ny00MTdhLTg1Y2YtNDZiMzhhODY3ZjJjXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="">
           <div class="overlay-genre">Video Game</div>
-          <div class="overlay-title">Friday Night Funkin'</div>
+          <div class="overlay-title">FNF</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/XhhEXK3NkzU">
           <img src="https://m.media-amazon.com/images/M/MV5BZWJlZTM2OWYtYTkxZC00OTQyLThjOWEtN2VkOGE1MTFmNGQxXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="">
@@ -131,7 +131,7 @@
         <div class="card" data-video="https://www.youtube.com/embed/tkAB6crm764">
           <img src="https://m.media-amazon.com/images/M/MV5BOGExYmQ1N2QtYzE2YS00ZTE2LWEwZTItZjUwNTNhYzJiYjdlXkEyXkFqcGc@._V1_.jpg" alt="">
           <div class="overlay-genre">Cartoon</div>
-          <div class="overlay-title">Animaniacs (2020)</div>
+          <div class="overlay-title">Animaniacs</div>
         </div>
         <div class="card" data-video="https://www.youtube.com/embed/ZArlzeNNAEs">
           <img src="https://m.media-amazon.com/images/M/MV5BM2E4MDU4NDctNjIxZC00ZWM5LTkyNDQtOGU0MTRhYWVmNzQ5XkEyXkFqcGc@._V1_.jpg" alt="">
@@ -151,7 +151,7 @@
         <div class="card" data-video="https://www.youtube.com/embed/00_sb0h2mRQ">
           <img src="https://resizing.flixster.com/l-_w1KP9x9U4KRTaKSF9i3_FjtU=/206x305/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p21364888_b_v8_aa.jpg" alt="">
           <div class="overlay-genre">Cartoon</div>
-          <div class="overlay-title">Smiling Friends Season 2</div>
+          <div class="overlay-title">Smiling Friends S2</div>
         </div>
         
       </div>
