--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="card" data-video="https://www.youtube.com/embed/00_sb0h2mRQ">
           <img src="https://resizing.flixster.com/l-_w1KP9x9U4KRTaKSF9i3_FjtU=/206x305/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p21364888_b_v8_aa.jpg" alt="">
           <div class="overlay-genre">Cartoon</div>
-          <div class="overlay-title">Smiling Friends S2</div>
+          <div class="overlay-title">Smiling Friends</div>
         </div>
         
       </div>
