--- a/pages/tools.html
+++ b/pages/tools.html
@@ -50,6 +50,10 @@
     <h1>VideoFBF (Frame by Frame Player)</h1>
   </a>
   
+  <a class="social-btn" href="ImageSequenceDeduplicator/index.html">
+    <h1>Image Sequence Deduplicator</h1>
+  </a>
+  
   <a class="social-btn" href="Kertas/index.html">
     <h1>Kertas (for sketching)</h1>
   </a>
@@ -58,9 +62,10 @@
     <h1>Animasikan (for stopmotion)</h1>
   </a>
   
-  <a class="social-btn" href="ImageSequenceDeduplicator/index.html">
-    <h1>Image Sequence Deduplicator</h1>
+  <a class="social-btn" href="BskyMediaGallery/index.html">
+    <h1>BSKY Media Gallery</h1>
   </a>
+  
   
 </div>
 
