--- a/pages/BskyMediaGallery/index.html
+++ b/pages/BskyMediaGallery/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+<button id="sortToggleBtn">Sort: Latest First</button>
 <!-- Hidden file input -->
 <input type="file" id="fileInput" accept=".json" style="display:none">
 
