--- a/pages/BskyMediaGallery/index.html
+++ b/pages/BskyMediaGallery/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <button id="sortToggleBtn">Sort: Latest First</button>
+<button id="clearStorageBtn">Clear Local Storage</button>
 <!-- Hidden file input -->
 <input type="file" id="fileInput" accept=".json" style="display:none">
 
