--- a/pages/BskyMediaViewer/index.html
+++ b/pages/BskyMediaViewer/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bluesky Media Gallery</title>
+  <title>Bluesky Media Viewer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Link external CSS -->
   <link rel="stylesheet" href="assets/style.css">
