--- a/pages/tools.html
+++ b/pages/tools.html
@@ -62,8 +62,8 @@
     <h1>Animasikan (for stopmotion)</h1>
   </a>
   
-  <a class="social-btn" href="BskyMediaGallery/index.html">
-    <h1>BSKY Media Gallery</h1>
+  <a class="social-btn" href="BskyMediaViewer/index.html">
+    <h1>BSKY Media Viewer</h1>
   </a>
   
   
