--- a/pages/BskyMediaViewer/index.html
+++ b/pages/BskyMediaViewer/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 <button id="sortToggleBtn">Sort: Latest First</button>
-<button id="clearStorageBtn">Clear Local Storage</button>
+<button id="clearStorageBtn">Clear</button>
+<label for="pageSizeInput">Show:</label>
+<input style="width:48px;" type="number" id="pageSizeInput" value="18" min="1" />
+<button id="applyPageSizeBtn">Apply</button>
+
 <!-- Hidden file input -->
 <input type="file" id="fileInput" accept=".json" style="display:none">
 
@@ -18,6 +22,7 @@
 <button id="prevBtn">Prev</button>
 <button id="saveBtn">Sample</button>
 <label for="fileInput" id="browseLabel">Load</label>
+
 
     <button id="nextBtn">Next</button>
 </div>
