--- a/pages/BskyMediaViewer/index.html
+++ b/pages/BskyMediaViewer/index.html
@@ -10,7 +10,7 @@
 <body>
 <button id="sortToggleBtn">Sort: Latest First</button>
 <button id="clearStorageBtn">Clear</button>
-<label for="pageSizeInput">Show:</label>
+<label for="pageSizeInput">Per-page:</label>
 <input style="width:48px;" type="number" id="pageSizeInput" value="18" min="1" />
 <button id="applyPageSizeBtn">Apply</button>
 
