--- a/pages/BskyMediaViewer/index.html
+++ b/pages/BskyMediaViewer/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-<button id="sortToggleBtn">Sort: Latest First</button>
+<button id="sortToggleBtn">Sort: Latest</button>
 <button id="clearStorageBtn">Clear</button>
 <label for="pageSizeInput">Per-page:</label>
 <input style="width:48px;" type="number" id="pageSizeInput" value="18" min="1" />
