--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -16,7 +16,7 @@
     <div id="content">
      <div class="nav-toggle">
         <button id="navButton"><span class="bl-icons-snap_vertex"></span></button>
-        <button id="toggleLabel"><span class="bl-icons-preferences"></span></button>
+        <button id="preferencesBtn"><span class="bl-icons-preferences"></span></button>
         <button id="minimalUI"><span class="bl-icons-statusbar"></span></button>
         <button id="undoBtn"><span class="bl-icons-loop_back"></span></button>
         <button id="redoBtn"><span class="bl-icons-loop_forwards"></span></button>
