--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -146,8 +146,9 @@
             <div id="stack">
                 <canvas id="checkerboard"></canvas>
                 <canvas id="background"></canvas>
-                <canvas id="layer_0"></canvas>
-<!--                <canvas id="layer_1"></canvas>-->
+                <canvas id="layer0"></canvas>
+<!--                <canvas id="layer1"></canvas>-->
+<!--                <canvas id="layer2"></canvas>-->
                 <canvas id="overlay"></canvas>
             </div>
         </div>
@@ -190,6 +191,8 @@
             <script src="assets/color-picker/ColorPicker.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
             <script src="assets/gif-js/gif.js"></script>
+            <script src="assets/js/jszip.min.js"></script>
+				<script src="assets/js/FileSaver.min.js"></script>
 
 </body>
 
