--- a/pages/XDTS-Editor/index.html
+++ b/pages/XDTS-Editor/index.html
@@ -17,13 +17,18 @@
 </div>
 
 <div clas="box">
+
 <div class="panel">
-		<b><label id="durationLabel">Duration: (0+0) | Frames: 0</label></b>
-		
-		<label>Adjust Duration by: <input type="number" id="adjustDuration" value="1" min="1"></label>
-		<button id="increaseDurationBtn">Increase Duration</button>
-		<button id="decreaseDurationBtn">Decrease Duration</button>
+	<label><b>File :</b></label>
+	<button id="loadXDTSbtn">Load XDTS</button>
+	<button id="newTimesheetBtn">New Blank Timesheet</button>
+	<label>New Duration (Frames) : </label><label><input type="number" id="newDuration" min="1" value="24"></label>
+	<button id="exportBtn" style="display:none">Export XDTS</button>
+	<br>
+	<label><i>*You can drag and drop .xdts file into the page to load it</i></label>
 	</div>
+	
+
   <div class="panel">
 	  <label><b>Symbols : </b></label>
 	  <label>Empty Cell : <input type="text" id="symNull" value="x"></label>
@@ -31,20 +36,31 @@
 	  <label>Reverse Sheet : <input type="text" id="symTick2" value="●"></label>
 	  <label>Hyphen : <input type="text" id="symHyphen" value="｜"></label> 
 	
-	
-	<label for="cellWidthInput">Cell Width:</label>
-<input type="number" id="cellWidthInput" min="0" max="999" value="30">
-
-<label for="cellHeightInput">Cell Height:</label>
-<input type="number" id="cellHeightInput" min="0" max="999" value="30">
 
 <!--<label for="fontSizeInput">Font Size:</label>-->
 <!--<input type="number" id="fontSizeInput" min="1" max="999" value="14">-->
 
 
 </div>
+<div class="panel">
+<label><b>Table :</b></label>
+<label for="cellWidthInput">Cell Width:</label>
+<input type="number" id="cellWidthInput" min="0" max="999" value="30">
 
+<label for="cellHeightInput">Cell Height:</label>
+<input type="number" id="cellHeightInput" min="0" max="999" value="30">
+</div>
+
+<div class="panel">
+		<b><label id="durationLabel">Duration: (0+0) | Frames: 0</label></b>
+		<br>
+		<label>Adjust Duration by: <input type="number" id="adjustDuration" value="1" min="1"></label>
+		<button id="increaseDurationBtn">Increase Duration</button>
+		<button id="decreaseDurationBtn">Decrease Duration</button>
+	</div>
+	
 	<div class="panel" >
+	<label><b>Track :</b></label>
 		<button id="addTrackBtn">Add Track</button>
 		<button id="removeTrackBtn">Remove Last Track</button>
 		<button id="autoRenameBtn">Auto-Rename Tracks</button>
@@ -55,14 +71,7 @@
 		
 	</div>
 	
-	<div class="panel">
-	<button id="loadXDTSbtn">Load XDTS</button>
-	<button id="newTimesheetBtn">New Blank Timesheet</button>
-	<label>Duration (Frames) : </label><label><input type="number" id="newDuration" min="1" value="24"></label>
-	<button id="exportBtn" style="display:none">Export XDTS</button>
-	<br>
-	<label><i>*You can drag and drop .xdts file to load it</i></label>
-	</div>
+	
 		
 </div>
 
